added faculty rank view files

--- a/Student-Portal/Views/Shared/_Layout.cshtml
+++ b/Student-Portal/Views/Shared/_Layout.cshtml
@@ -32,6 +32,7 @@
                                 <li>@Html.ActionLink("Roles", "Index", "Role")</li>
                                 <li>@Html.ActionLink("Courses", "Index", "Courses")</li>
                                 <li>@Html.ActionLink("View Users", "Index", "ViewUser")</li>
+                                <li>@Html.ActionLink("Faculty Ranks", "Index", "FacultyRank")</li>
                             }
                             else if (User.IsInRole("Student"))
                             {
