updated faculty rank index page

--- a/Student-Portal/Views/FacultyRank/Index.cshtml
+++ b/Student-Portal/Views/FacultyRank/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<Student_Portal.Models.FacultyRank>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Faculty Rank";
 }
 
-<h2>Index</h2>
+<h2>Add Faculty Rank</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Add New Faculty Rank", "Create")
 </p>
 <table class="table">
     <tr>
