--- a/Student-Portal/Views/FacultyRank/Create.cshtml
+++ b/Student-Portal/Views/FacultyRank/Create.cshtml
@@ -4,14 +4,14 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+    <h2>Add Faculty Rank</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>FacultyRank</h4>
+        <h4>Add a new faculty rank</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
