--- a/Student-Portal/Views/FacultyRank/Delete.cshtml
+++ b/Student-Portal/Views/FacultyRank/Delete.cshtml
@@ -4,11 +4,10 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Delete Faculty Rank</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this rank?</h3>
 <div>
-    <h4>FacultyRank</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
