--- a/Student-Portal/Views/FacultyRank/Index.cshtml
+++ b/Student-Portal/Views/FacultyRank/Index.cshtml
@@ -9,13 +9,15 @@
 <p>
     @Html.ActionLink("Add New Faculty Rank", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Rank)
-        </th>
-        <th></th>
-    </tr>
+<table class="table table-striped table-hover">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Rank)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
 
 @foreach (var item in Model) {
     <tr>
