--- a/Student-Portal/Views/ViewUser/RegisterFaculty.cshtml
+++ b/Student-Portal/Views/ViewUser/RegisterFaculty.cshtml
@@ -1,4 +1,4 @@
-﻿@model Student_Portal.Models.RegisterViewModel
+﻿@model Student_Portal.Models.RegisterFacultyViewModel
 @{
     ViewBag.Title = "Register";
 }
@@ -17,34 +17,40 @@ else
     @Html.AntiForgeryToken()
     <h4>Create a new account</h4>
     <hr />
-    @*@Html.ValidationSummary("", new { @class = "text-danger" })*@
-    <div class="well">
-        <div class="form-group">
-            @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(m => m.RoleeName, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.DropDownListFor(m => m.RoleeName, new SelectList(ViewBag.Roles, "Value", "Text", "Faculty"), new { @class = "form-control" })
-            </div>
+    @Html.ValidationSummary("", new { @class = "text-danger" })
+<div class="well">
+    <div class="form-group">
+        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
         </div>
     </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(m => m.RoleeName, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.DropDownListFor(m => m.RoleeName, new SelectList(ViewBag.Roles, "Value", "Text", "Faculty"), new { @class = "form-control" })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.Rank, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.DropDownListFor(m => m.Rank, new SelectList(ViewBag.Ranks, "Value", "Text", "Instructor"), new { @class = "form-control" })
+        </div>
+    </div>
+</div>
 
     <div>
         <h3>Personal Details</h3>
@@ -177,32 +183,6 @@ else
             </div>
         </div>
         }
-    //Popup modal
-    <div id="myModal" class="modal fade" role="dialog">
-        <div class="modal-dialog">
-
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Error</h4>
-                </div>
-                <div class="modal-body">
-                    @if (Html.ValidationSummary("", new { @class = "text-danger" }) != null)
-                    {
-                        <p style="text-align:center; font-size:medium">Some fields are incomplete.</p>
-                    }
-                    <br />
-                    <br />
-                    <br />
-                </div>
-                @*<div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    </div>*@
-            </div>
-
-        </div>
-    </div>
 }
 
 @section Scripts {
