rendered js bundle in layout page

--- a/Student-Portal/Views/Shared/_CustomLayout.cshtml
+++ b/Student-Portal/Views/Shared/_CustomLayout.cshtml
@@ -915,15 +915,8 @@
         </div>
     </div>
     <!-- offset area end -->
-    <!-- jquery latest version -->
-    <script src="assets/js/vendor/jquery-2.2.4.min.js"></script>
-    <!-- bootstrap 4 js -->
-    <script src="assets/js/popper.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/owl.carousel.min.js"></script>
-    <script src="assets/js/metisMenu.min.js"></script>
-    <script src="assets/js/jquery.slimscroll.min.js"></script>
-    <script src="assets/js/jquery.slicknav.min.js"></script>
+
+    @Scripts.Render("~/template/js")
 
     <!-- start chart js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
