reformat partial login to fit template

--- a/Student-Portal/Views/Shared/_LoginPartial.cshtml
+++ b/Student-Portal/Views/Shared/_LoginPartial.cshtml
@@ -1,26 +1,34 @@
 ﻿@using Microsoft.AspNet.Identity
-@if (Request.IsAuthenticated)
-{
-    using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" }))
-    {
-    @Html.AntiForgeryToken()
 
-    <ul class="nav navbar-nav navbar-right">
-        <li class="nav-item">
-            @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
-        </li>
-        <li class="nav-item"><a class="nav-link" href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
-    </ul>
-    }
-}
-else
-{
-    <ul class="nav navbar-nav navbar-right">
-        <li>
-            @Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink"})
-        </li>
-        <li> 
-            @Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink"})
-        </li>
-    </ul>
-}
+    <div class="col-sm-6 clearfix">
+        <div class="user-profile pull-right">
+            <img class="avatar user-thumb" src="~/Content/images/author/avatar.png" alt="avatar">
+            @if (Request.IsAuthenticated)
+            {
+                using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" }))
+                {
+                    @Html.AntiForgeryToken()
+                    <h4 class="user-name dropdown-toggle" data-toggle="dropdown">Hello @User.Identity.Name!<i class="fa fa-angle-down"></i></h4>
+                    <div class="dropdown-menu">
+                        @Html.ActionLink("Manage Account", "Index", "Manage", routeValues: null, htmlAttributes: new { @class = "dropdown-item", title = "Manage" })
+                        <a class="dropdown-item" href="javascript:document.getElementById('logoutForm').submit()">Log off</a>
+                    </div>
+                }
+            }
+            else
+            {
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="#">Message</a>
+                <a class="dropdown-item" href="#">Settings</a>
+                <a class="dropdown-item" href="#">Log Out</a>
+                @Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { @class = "dropdown-item", id = "registerLink" })
+                @Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { @class = "dropdown-item", id = "loginLink" })
+            </div>
+                
+            }
+
+
+        </div>
+    </div>
+
+
