--- a/Student-Portal/Views/Role/Delete.cshtml
+++ b/Student-Portal/Views/Role/Delete.cshtml
@@ -1,31 +1,37 @@
 ﻿@model Student_Portal.Models.RoleViewModel
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Role";
 }
+<div class="row justify-content-md-center">
+    <div class="col-lg-9 mt-5">
+        <div class="card">
+            <div class="card-body">
+                <h5>Are you sure you want to delete this role?</h5>
+                    <div>
+                        <hr />
+                        <dl class="dl-horizontal">
+                            @*<dt>
+                                @Html.DisplayNameFor(model => model.Name)
+                            </dt>*@
 
-<h2>Delete</h2>
+                            <h2>
+                                @Html.DisplayFor(model => model.Name)
+                            </h2>
 
-<h5>Are you sure you want to delete this role?</h4>
-<div>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+                        </dl>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+                        @using (Html.BeginForm())
+                        {
+                            @Html.AntiForgeryToken()
 
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+                            <div class="form-actions no-color">
+                                <input type="submit" value="Delete" class="btn btn-default" /> |
+                                @Html.ActionLink("Back to List", "Index")
+                            </div>
+                        }
+                    </div>
+            </div>
         </div>
-    }
+    </div>
 </div>
