--- a/Student-Portal/Views/Role/Details.cshtml
+++ b/Student-Portal/Views/Role/Details.cshtml
@@ -1,26 +1,30 @@
 ﻿@model Student_Portal.Models.RoleViewModel
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Role Details";
 }
 
-<h2>Role Details</h2>
+    <div class="row justify-content-md-center">
+        <div class="col-lg-9 mt-5">
+            <div class="card">
+                <div class="card-body">
+                    <div>
+                        <dl class="dl-horizontal">
+                            <h5>
+                                Role Name:
+                            </h5>
 
-<div>
-    <h4>View role details</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+                            <h2>
+                                @Html.DisplayFor(model => model.Name, new { @class = "pull-right" })
+                            </h2>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-
-    </dl>
-</div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+                        </dl>
+                    </div>
+                    <p>
+                        @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+                        @Html.ActionLink("Back to List", "Index")
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
