--- a/Student-Portal/Views/Role/Index.cshtml
+++ b/Student-Portal/Views/Role/Index.cshtml
@@ -1,35 +1,50 @@
 ﻿@model IEnumerable<Student_Portal.Models.RoleViewModel>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Roles";
 }
 
-<h2>Add Roles</h2>
+<div class="row justify-content-md-center">
+    <div class="col-lg-9 mt-5">
+        <p>
+            @Html.ActionLink("Add New Role", "Create")
+        </p>
 
-<p>
-    @Html.ActionLink("Add New Role", "Create")
-</p>
-<table class="table table-striped table-hover">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-        </tr>
-        <tr></tr>
-    </thead>
+        <div class="card">
+            <div class="card-body">
+                <h4 class="header-title">Add Roles</h4>
+                <div class="single-table">
+                    <div class="table-responsive">
+                        <table class="table table-hover table-bordered">
+                            <thead class="text-uppercase">
+                                <tr>
+                                    <th scope="col">
+                                        @Html.DisplayNameFor(model => model.Name)
+                                    </th>
+                                    <th scope="col">action</t
+                                </tr>
+                                <tr></tr>
+                            </thead>
+                            @foreach (var item in Model)
+                            {
+                                <tbody>
+                                    <tr>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Name)
+                                        </td>
+                                        <td>
+                                            @Html.ActionLink("Edit", "Edit", new { @class = "btn btn-flat btn-primary mb-3", id = item.Id }) |
+                                            @Html.ActionLink("Details", "Details", new { @class = "btn btn-flat btn-primary mb-3", id = item.Id }) |
+                                            @Html.ActionLink("Delete", "Delete", new { @class = "btn btn-danger mb-3", id = item.Id, })
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            }
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
-
-</table>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
