integrated template with course view

--- a/Student-Portal/Views/Courses/Index.cshtml
+++ b/Student-Portal/Views/Courses/Index.cshtml
@@ -1,47 +1,60 @@
 ﻿@model IEnumerable<Student_Portal.Models.Course>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Course";
 }
 
-<h2>List of Course</h2>
+<div class="row justify-content-md-center">
+    <div class="col-lg-9 mt-5">
+        <p>
+            @Html.ActionLink("Create New Course", "Create")
+        </p>
+        <div class="card">
+            <div class="card-body">
+                <h4 class="header-title">Courses</h4>
+                <div class="single-table">
+                    <div class="table-responsive">
+                        <table class="table table-hover table-bordered">
+                            <thead class="text-uppercase">
+                                <tr>
+                                    <th scope="col" scope="col">
+                                        @Html.DisplayNameFor(model => model.CourseName)
+                                        </thscope="col"scope="col">
+                                    <th scope="col">
+                                        @Html.DisplayNameFor(model => model.CourseCode)
+                                    </th>
+                                    <th scope="col">
+                                        @Html.DisplayNameFor(model => model.CourseUnit)
+                                    </th>
+                                    <th scope="col">action</th>
+                                    <th></th>
+                                </tr>
+                            </thead>
 
-<p>
-    @Html.ActionLink("Create New Course", "Create")
-</p>
-<table class="table table-hover table-striped">
-    <thead
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.CourseName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CourseCode)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CourseUnit)
-        </th>
-        <th></th>
-    </tr>
-    </thead>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.CourseName)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.CourseCode)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.CourseUnit)
+                                    </td>
+                                    <td>
+                                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                                        @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                                    </td>
+                                </tr>
+                            }
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.CourseName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CourseCode)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CourseUnit)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
-
-</table>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
