--- a/Student-Portal/Views/Courses/Delete.cshtml
+++ b/Student-Portal/Views/Courses/Delete.cshtml
@@ -1,48 +1,55 @@
 ﻿@model Student_Portal.Models.Course
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Course";
 }
+<div class="row justify-content-md-center">
+    <div class="col-lg-9 mt-5">
+        <div class="card">
+            <div class="card-body">
 
-    <h2>Delete Course</h2>
+                <h5>Are you sure you want to delete this course?</h5>
+                <div>
+                    @*<h4>Course</h4>*@
+                    <hr />
+                    <dl class="dl-horizontal">
+                        <dt>
+                            @Html.DisplayNameFor(model => model.CourseName)
+                        </dt>
 
-<h3>Are you sure you want to delete this course?</h3>
-<div>
-    @*<h4>Course</h4>*@
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.CourseName)
-        </dt>
+                        <dd>
+                            @Html.DisplayFor(model => model.CourseName)
+                        </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.CourseName)
-        </dd>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.CourseCode)
+                        </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.CourseCode)
-        </dt>
+                        <dd>
+                            @Html.DisplayFor(model => model.CourseCode)
+                        </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.CourseCode)
-        </dd>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.CourseUnit)
+                        </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.CourseUnit)
-        </dt>
+                        <dd>
+                            @Html.DisplayFor(model => model.CourseUnit)
+                        </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.CourseUnit)
-        </dd>
+                    </dl>
 
-    </dl>
+                    @using (Html.BeginForm())
+                    {
+                        @Html.AntiForgeryToken()
 
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to Course List", "Index")
+                        <div class="form-actions no-color">
+                            <input type="submit" value="Delete" class="btn btn-default" /> |
+                            @Html.ActionLink("Back to Course List", "Index")
+                        </div>
+                    }
+                </div>
+            </div>
         </div>
-    }
+    </div>
 </div>
