--- a/Student-Portal/Views/Courses/Details.cshtml
+++ b/Student-Portal/Views/Courses/Details.cshtml
@@ -1,42 +1,47 @@
 ﻿@model Student_Portal.Models.Course
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Course Details";
 }
+<div class="row justify-content-md-center">
+    <div class="col-lg-9 mt-5">
+        <div class="card">
+            <div class="card-body">
+                <div>
+                    <h4>Course</h4>
+                    <hr />
+                    <dl class="dl-horizontal">
+                        <dt>
+                            @Html.DisplayNameFor(model => model.CourseName)
+                        </dt>
 
-    <h2>Course Details</h2>
+                        <dd>
+                            @Html.DisplayFor(model => model.CourseName)
+                        </dd>
 
-<div>
-    @*<h4>Course</h4>*@
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.CourseName)
-        </dt>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.CourseCode)
+                        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.CourseName)
-        </dd>
+                        <dd>
+                            @Html.DisplayFor(model => model.CourseCode)
+                        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.CourseCode)
-        </dt>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.CourseUnit)
+                        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.CourseCode)
-        </dd>
+                        <dd>
+                            @Html.DisplayFor(model => model.CourseUnit)
+                        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.CourseUnit)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CourseUnit)
-        </dd>
-
-    </dl>
+                    </dl>
+                </div>
+                <p>
+                    @Html.ActionLink("Edit Course", "Edit", new { id = Model.Id }) |
+                    @Html.ActionLink("Back to Course List", "Index")
+                </p>
+            </div>
+        </div>
+    </div>
 </div>
-<p>
-    @Html.ActionLink("Edit Course", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to Course List", "Index")
-</p>
