changed role viewbag titles

--- a/Student-Portal/Views/Role/Create.cshtml
+++ b/Student-Portal/Views/Role/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Student_Portal.Models.RoleViewModel
 
 @{
-    ViewBag.Title = "Add Role";
+    ViewBag.Title = "Role";
 }
 
 <div class="row justify-content-md-center">
