--- a/Student-Portal/Views/Role/Edit.cshtml
+++ b/Student-Portal/Views/Role/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Student_Portal.Models.RoleViewModel
 
 @{
-    ViewBag.Title = "Edit Role";
+    ViewBag.Title = "Role";
 }
 
 <div class="row justify-content-md-center">
