--- a/Student-Portal/Views/Role/Index.cshtml
+++ b/Student-Portal/Views/Role/Index.cshtml
@@ -12,7 +12,7 @@
 
         <div class="card">
             <div class="card-body">
-                <h4 class="header-title">Add Roles</h4>
+                <h4 class="header-title">Roles</h4>
                 <div class="single-table">
                     <div class="table-responsive">
                         <table class="table table-hover table-bordered">
@@ -21,7 +21,7 @@
                                     <th scope="col">
                                         @Html.DisplayNameFor(model => model.Name)
                                     </th>
-                                    <th scope="col">action</t
+                                    <th scope="col">action</th>
                                 </tr>
                                 <tr></tr>
                             </thead>
