--- a/Student-Portal/Views/Role/Delete.cshtml
+++ b/Student-Portal/Views/Role/Delete.cshtml
@@ -1,36 +1,36 @@
 ﻿@model Student_Portal.Models.RoleViewModel
 
 @{
-    ViewBag.Title = "Delete Role";
+    ViewBag.Title = "Role";
 }
 <div class="row justify-content-md-center">
     <div class="col-lg-9 mt-5">
         <div class="card">
             <div class="card-body">
                 <h5>Are you sure you want to delete this role?</h5>
-                    <div>
-                        <hr />
-                        <dl class="dl-horizontal">
-                            @*<dt>
+                <div>
+                    <hr />
+                    <dl class="dl-horizontal">
+                        @*<dt>
                                 @Html.DisplayNameFor(model => model.Name)
                             </dt>*@
 
-                            <h2>
-                                @Html.DisplayFor(model => model.Name)
-                            </h2>
+                        <h2>
+                            @Html.DisplayFor(model => model.Name)
+                        </h2>
 
-                        </dl>
+                    </dl>
 
-                        @using (Html.BeginForm())
-                        {
-                            @Html.AntiForgeryToken()
+                    @using (Html.BeginForm())
+                    {
+                        @Html.AntiForgeryToken()
 
-                            <div class="form-actions no-color">
-                                <input type="submit" value="Delete" class="btn btn-default" /> |
-                                @Html.ActionLink("Back to List", "Index")
-                            </div>
-                        }
-                    </div>
+                        <div class="form-actions no-color">
+                            <input type="submit" value="Delete" class="btn btn-default" /> |
+                            @Html.ActionLink("Back to List", "Index")
+                        </div>
+                    }
+                </div>
             </div>
         </div>
     </div>
