implemented template for forgot password view

--- a/Student-Portal/Views/Account/ForgotPassword.cshtml
+++ b/Student-Portal/Views/Account/ForgotPassword.cshtml
@@ -1,29 +1,67 @@
 ﻿@model Student_Portal.Models.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
+    Layout = null;
 }
 
-<h2>@ViewBag.Title.</h2>
+<!doctype html>
+<html class="no-js" lang="en">
 
-@using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Enter your email.</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Forgot Password</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" type="image/png" href="assets/images/icon/favicon.ico">
+
+    @Styles.Render("~/template/css")
+    @Scripts.Render("~/bundles/modernizr")
+
+    <link rel="stylesheet" href="https://www.amcharts.com/lib/3/plugins/export/export.css" type="text/css" media="all" />
+</head>
+
+
+<body>
+    <!-- preloader area start -->
+    <div id="preloader">
+        <div class="loader"></div>
+    </div>
+
+    <div class="login-area login-bg">
+        <div class="container">
+            <div class="login-box ptb--100">
+
+                @using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                {
+                    @Html.AntiForgeryToken()
+                    <div class="login-form-head">
+                        <h4>Forgot Password</h4>
+                        <p>Forgot Password Your Password ? Reset Now</p>
+                    </div>
+                    @Html.ValidationSummary("", new { @class = "text-danger" })
+                    <div class="login-form-body">
+                        <div class="form-group">
+                            @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                        </div>
+                        <div class="submit-btn-area mt-5">
+                            <button id="form_submit" type="submit">Email Link <i class="ti-arrow-right"></i></button>
+                        </div>
+                        @*<div class="submit-btn-area mt-5">
+                                <div class="col-md-offset-2 col-md-10">
+                                    <input type="submit" class="btn btn-default" value="Email Link" />
+                                </div>
+                            </div>*@
+                    </div>
+                }
+            </div>
         </div>
     </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Email Link" />
-        </div>
-    </div>
-}
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+    @Scripts.Render("~/template/js")
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }
+</body>
+</html>
